cfn_benchmark/cfn_templates/Tim-van-Oudheusden__aws-vpc-cloudformation/Security-Groups/securityGroups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Security groups for frontend and private resources

Parameters:
  EnvironmentName:
    Description: A unique environment name prefix (e.g., prod, test, dev)
    Type: String

Resources:

  FrontendSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Frontend Services
      VpcId:
        Fn::ImportValue: !Sub ${EnvironmentName}-VpcId
  FrontendSecGroupHTTPinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref FrontendSecGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0
  FrontendSecGroupSSHinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref FrontendSecGroup
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0

  PrivateSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Private Resources
      VpcId:
        Fn::ImportValue: !Sub ${EnvironmentName}-VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !Ref FrontendSecGroup
  PrivateSecGroupHTTPinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref PrivateSecGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0
  PrivateSecGroupSSHinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref PrivateSecGroup
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
  PrivateSecGroupRDSinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref PrivateSecGroup
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId: !Ref PrivateSecGroup

Outputs:
  FrontendSecGroup:
    Description: Reference to Frontend Security Group
    Value: !Ref FrontendSecGroup
    Export:
      Name: !Sub ${EnvironmentName}-FrontendSecGroup
  FrontendSecGroupHTTPinbound:
    Description: FrontendSecGroup HTTP inbound
    Value: !Ref FrontendSecGroupHTTPinbound
    Export:
      Name: !Sub ${EnvironmentName}-FrontendSecGroupHTTPinbound
  FrontendSecGroupSSHinbound:
    Description: FrontendSecGroup SSH inbound
    Value: !Ref FrontendSecGroupSSHinbound
    Export:
      Name: !Sub ${EnvironmentName}-FrontendSecGroupSSHinbound

  PrivateSecGroup:
    Description: Private Security Group for ECS
    Value: !Ref PrivateSecGroup
    Export:
      Name: !Sub ${EnvironmentName}-PrivateSecGroup
  PrivateSecGroupHTTPinbound:
    Description: PrivateSecGroup HTTP inbound
    Value: !Ref PrivateSecGroupHTTPinbound
    Export:
      Name: !Sub ${EnvironmentName}-PrivateSecGroupHTTPinbound
  PrivateSecGroupSSHinbound:
    Description: PrivateSecGroup SSH inbound
    Value: !Ref PrivateSecGroupSSHinbound
    Export:
      Name: !Sub ${EnvironmentName}-PrivateSecGroupSSHinbound
  PrivateSecGroupRDSinbound:
    Description: PrivateSecGroup RDS inbound
    Value: !Ref PrivateSecGroupRDSinbound
    Export:
      Name: !Sub ${EnvironmentName}-PrivateSecGroupRDSinbound
